setting.shが必要だったので修正